[package]
name = "GitPilot"
version = "0.1.0"
edition = "2021"
authors = ["Ben Meddeb <bmeddeb@asu.edu>"]
description = "PilotGit: A simple Rust wrapper around the Git command-line interface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bmeddeb/gitpilot"
readme = "README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For deriving the Error trait easily
thiserror = "2.0.12"

# For validating Git URLs with regular expressions
regex = "1.11.1"

# For safe one-time initialization of static data (like the Regex)
once_cell = "1.21.3" # Or latest compatible version

# For optional serialization/deserialization of BranchName
# Marked as optional = true, enabled via the "serde" feature below
serde = { version = "1.0.219", features = ["derive"], optional = true }


[features]
serde = ["dep:serde"] # The "serde" feature enables the optional dependency "serde"

[dev-dependencies]
tempfile = "3.19.1"
