[package]
name = "GitPilot"
version = "0.2.0"
edition = "2021"
authors = ["Ben Meddeb <bmeddeb@asu.edu>"]
description = "GitPilot: A comprehensive Rust wrapper around the Git command-line interface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bmeddeb/gitpilot"
readme = "README.md"
keywords = ["git", "version-control", "vcs", "dvcs"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For deriving the Error trait easily
thiserror = "2.0.12"

# For validating Git URLs with regular expressions
regex = "1.11.1"

# For safe one-time initialization of static data (like the Regex)
once_cell = "1.21.3"

# For parsing and formatting time
chrono = "0.4.40"

# For optional serialization/deserialization
serde = { version = "1.0.219", features = ["derive"], optional = true }

# For async Git operations (optional)
tokio = { version = "1.44.1", features = ["full"], optional = true }

[features]
default = []
serde = ["dep:serde"]
async = ["dep:tokio"]
full = ["serde", "async"]

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.28", features = ["full", "test-util"] }
assert_cmd = "2.0"
predicates = "3.0"

[[example]]
name = "repo_stats"
path = "examples/repo_stats.rs"
required-features = []

[[example]]
name = "async_clone"
path = "examples/async_clone.rs"
required-features = ["async"]